samples/deathstar-cilium.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-kodasahtjqekysp
  namespace: default
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        k8s-app: kube-dns
        k8s:io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: xwing
      class: xwing
      org: alliance
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-tcmheycwwtrmiin
  namespace: default
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        k8s-app: kube-dns
        k8s:io.kubernetes.pod.namespace: kube-system
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tiefighter
      class: tiefighter
      org: empire
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-imuzqhwjqqhkqdr
  namespace: default
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: deathstar
        class: deathstar
        k8s:io.kubernetes.pod.namespace: default
        org: empire
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: POST
          path: /v1/XYZ
        - method: POST
          path: /v1/request-landing
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: xwing
      class: xwing
      org: alliance
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-ojokwocgmhicyss
  namespace: default
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        app.kubernetes.io/name: deathstar
        class: deathstar
        k8s:io.kubernetes.pod.namespace: default
        org: empire
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: POST
          path: /v1/ABC
        - method: POST
          path: /v1/request-landing
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tiefighter
      class: tiefighter
      org: empire
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-ingress-ouhiqqjgncjiogr
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: deathstar
      class: deathstar
      org: empire
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: tiefighter
        class: tiefighter
        k8s:io.kubernetes.pod.namespace: default
        org: empire
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: POST
          path: /v1/ABC
        - method: POST
          path: /v1/request-landing
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-ingress-rsencvfeziigbtr
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: deathstar
      class: deathstar
      org: empire
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: xwing
        class: xwing
        k8s:io.kubernetes.pod.namespace: default
        org: alliance
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: POST
          path: /v1/XYZ
        - method: POST
          path: /v1/request-landing
---
